<resources>
    <string name="app_name">Valentine</string>
    <string name="Encounters">邂逅</string>
    <string name="chapter">章节</string>
    <string name="about">关于</string>
    <string name="back">返回</string>
    <string name="chapter1">幕一</string>
    <string name="chapter2">幕二</string>
    <string name="chapter1_1_text">初识</string>
    <string name="chapter1_2_text">发展</string>
    <string name="chapter1_3_text">告白</string>
    <string name="chapter2_1_text">约会</string>
    <string name="chapter2_2_text">淡去</string>
    <string name="chapter2_3_text">放手</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="backInfo">是否返回首页</string>
    <string name="openNew">是否开始新的邂逅</string>
    <string name="we_late">我们来晚了,不好意思了</string>
    <string name="Her_name">她的名字—娱</string>
    <string name="food">开饭吧</string>
    <string name="send_to_home">饭后我送她回家吧</string>
    <string name="send_her">送她</string>
    <string name="first_day">2018年8月20号</string>
    <string name="chat_day">2018年8月21号</string>
    <string name="send">发送</string>
    <string name="first_movie">我们相约第二日的电影</string>
    <string name="first_gift">我还送给她一件礼物</string>
    <string name="ibm">IBM定制铅笔</string>
    <string name="short_time">相聚的时光总是短暂</string>
    <string name="tell_her">告诉她</string>
    <string name="leave">离开</string>
    <string name="get_along">这是我们相识的</string>
    <string name="date_1">光影</string>
    <string name="date_2">池塘</string>
    <string name="date_3">沙滩</string>
    <string name="date_4">手印</string>
    <string name="date_5">初吻</string>
    <string name="next">之后</string>
    <string name="keep_text">挽留</string>
</resources>
