<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Chapter.Chapter2_1"
    tools:ignore="UnusedAttribute,ContentDescription">

    <ImageView
        android:id="@+id/date_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showDatePicDialog"
        android:src="@mipmap/map_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_map_1_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:background="@drawable/text_background"
        android:gravity="center"
        android:onClick="changeDate"
        android:text="@string/date_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_map" />

    <TextView
        android:id="@+id/date_map_2_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@drawable/text_background"
        android:gravity="center"
        android:onClick="changeDate"
        android:text="@string/date_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_map" />

    <TextView
        android:id="@+id/date_map_3_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/text_background"
        android:gravity="center"
        android:onClick="changeDate"
        android:text="@string/date_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_map_1_tv" />

    <TextView
        android:id="@+id/date_map_4_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@drawable/text_background"
        android:gravity="center"
        android:onClick="changeDate"
        android:text="@string/date_4"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_map_2_tv" />

    <TextView
        android:id="@+id/date_map_5_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_background"
        android:gravity="center"
        android:onClick="changeDate"
        android:text="@string/date_5"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/date_map_4_tv"
        app:layout_constraintStart_toEndOf="@+id/date_map_3_tv"
        app:layout_constraintTop_toBottomOf="@+id/date_map_3_tv" />

    <TextView
        android:id="@+id/chapter2_1_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/text_background"
        android:gravity="center"
        android:onClick="openChapter2_2"
        android:text="@string/next"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:transitionName="toChapter2_2Share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/chapter2_1_cover_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:gravity="center"
        android:onClick="closeCover"
        android:text="@string/chapter2_1_text"
        android:transitionName="toChapter2_1Share"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>